Modified bower name

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "Quark-Bootstrap",
+  "name": "qk-bootstrap",
   "version": "1.0.0",
   "authors": [
-    "admin <fllopez@bpba.com.ar>"
+    "Fran150 <panchi150@gmail.com>"
   ],
   "description": "Objetos de Bootstrap implementados para quark.js",
   "main": "main.js",
@@ -10,7 +10,10 @@
     "amd"
   ],
   "keywords": [
-    "quark-bootstrap"
+      "bootstrap",
+      "quark",
+      "module",
+      "components"
   ],
   "license": "MIT",
   "private": true,
