--- a/bower.json
+++ b/bower.json
@@ -1,24 +1,34 @@
 {
-  "name": "Quark-Bootstrap",
-  "version": "1.0.0",
+  "name": "qk-bootstrap",
+  "version": "0.5.0",
   "authors": [
-    "admin <fllopez@bpba.com.ar>"
+    "fran150 <panchi150@gmail.com>"
   ],
-  "description": "Objetos de Bootstrap implementados para quark.js",
-  "main": "main.js",
+  "description": "Componentes de Bootstrap para Quark",
+  "main": "dist/main.js",
   "moduleType": [
     "amd"
   ],
   "keywords": [
-    "quark-bootstrap"
+    "Quark",
+    "Bootstrap"
   ],
   "license": "MIT",
-  "private": true,
   "ignore": [
-    "**/.*",
     "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+    "bower_modules"
+  ],
+  "dependencies": {
+    "quark": "~0.9.2",
+    "requirejs-plugins": "^1.0.3",
+    "AdminLTE": "admin-lte#^2.3.11",
+    "bootstrap-switch": "~3.3.2",
+    "bootstrap": "^3.3.7"
+  },
+  "devDependencies": {
+    "jasmine-core": "jasmine#^2.5.2"
+  },
+  "resolutions": {
+    "jquery": "~2.2.4"
+  }
 }
