--- a/bower.json
+++ b/bower.json
@@ -24,8 +24,10 @@
     "quark": "~0.9.2",
     "requirejs-plugins": "^1.0.3",
     "AdminLTE": "admin-lte#^2.3.11",
-    "bootstrap-switch": "~3.3.2",
     "bootstrap": "^3.3.7",
+    "bootstrap-switch": "~3.3.2",
+    "bootstrap-datepicker": "^1.6.4",
+    "bootstrap-daterangepicker": "^2.1.25",
     "select2": "^4.0.3"
   },
   "devDependencies": {
